src/components/common/footer/footer.css
.footer {
  background-color: #2d3748;
  color: white;
  padding: 32px 0;
  font-size: 14px; /* Set the base font size */
}

.footer-container {
  max-width: 1400px;
  margin: 0 auto;
  padding: 0 16px;
}

.footer-content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.footer-left,
.footer-center,
.footer-right {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin-bottom: 24px;
}

.footer-left {
  flex: 1;
}

.footer-center {
  flex: 1;
}

.footer-right {
  flex: 1;
}

.footer-logo {
  height: 80px; /* Resized the logo */
  width: 280px;
  margin-bottom: 16px;
  animation: fadeIn 1s ease-in-out;
}

.footer-email {
  text-transform: lowercase;
  color: #fff;
  text-decoration: underline;
}

.footer-icons {
  display: flex;
  gap: 16px;
  margin-bottom: 16px;
}

.footer-icon {
  color: #1e90ff;
  font-size: 24px;
  text-decoration: none;
}

.footer-icon:hover {
  color: #3748ff;
}

.footer-links {
  display: flex;
  gap: 16px;
}

.footer-link {
  text-decoration: underline;
  color: white;
}

.footer-link:hover {
  color: #1e90ff;
}

.footer-bottom {
  border-top: 1px solid #4a5568;
  margin-top: 24px;
  padding-top: 16px;
  text-align: center;
  font-size: 14px;
}

.footer-bottom p {
  text-align: center;
  font-size: 14px;
}

/* Responsive Design */
@media (min-width: 768px) {
  .footer-content {
    flex-direction: row;
    text-align: left;
  }
  
  .footer-left,
  .footer-center,
  .footer-right {
    align-items: flex-start;
  }
  
  .footer-left {
    text-align: left;
  }

  .footer-center {
    text-align: left;
  }

  .footer-right {
    text-align: left;
    align-items: flex-start;
  }
}

/* Animations */
@keyframes fadeIn {
  from { opacity: 0; }
  to { opacity: 1; }
}


.footer-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.footer-nmsimage,
.footer-ehoimage {
  flex: 1;
}

.footer-nms {
  width: 100px; /* Adjust the width as needed */
  height: auto; /* Maintain aspect ratio */
  margin-top: 5px; /* Adjust vertical margin as needed */
}

.footer-eho {
  width: 80px; /* Adjust the width as needed */
  height: auto; /* Maintain aspect ratio */
  margin-top: 5px; /* Adjust vertical margin as needed */
}
.footer-nmsimage{
  margin-left:450px;
}
.footer-ehoimage{
  margin-right:280px;
}

